Make allowed origins configurable